--- a/src/views/login.css
+++ b/src/views/login.css
@@ -1,11 +1,15 @@
-.home-container {
+.home-containers {
   width: 100%;
   display: flex;
   overflow: auto;
   min-height: 100vh;
   align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: left;
+}
+.login-title{
+  font-family: "Poppins";
+  font-size: 1.7em;
 }
 .login {
   flex: 0 0 auto;
@@ -17,11 +21,17 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
+.desc{
+  margin-top: 5px;
+  font-size: 16px;
+}
 .login2 {
   flex: 0 0 auto;
-  width: 390px;
+  width: 35%;
   height: 100%;
   display: flex;
+  padding: 1em;
   align-items: flex-start;
   flex-direction: column;
   justify-content: center;
@@ -62,7 +72,7 @@
   padding-bottom: 17px;
 }
 .home-button-login {
-  color: rgb(255, 255, 255);
+  color: #003e17;
   width: 100%;
   font-size: 15px;
   font-style: normal;
@@ -73,7 +83,7 @@
   border-width: 0px;
   border-radius: 10px;
   padding-bottom: 18px;
-  background-color: rgb(226, 111, 111);
+  background-color: #83f28f;
 }
 @media(max-width: 991px) {
   .home-container1 {
@@ -88,10 +98,20 @@
   }
 }
 @media(max-width: 479px) {
-  .home-container1 {
-    align-items: center;
+  .login-title{
+    width: 80%;
+  }
+  .desc{
+    font-size: 0.9em;
+  }
+  .login{
     padding-left: 0px;
-    justify-content: center;
+  }
+  .login2{
+    width: 100%;
+  }
+  .home-text{
+    font-size: 0.9em;
   }
   .home-container2 {
     width: 363px;
